# crypto_trading_system_v2

./: .gitignore  API_量化風險分析.md  BingX_API限制_最終結論.md  BingX_API限制說明.md  BingX不同帳戶手續費對比.md  BingX手續費完整說明.md  CLAUDE.md  CLI_README.md  GitHub推送完成_最終總結.md  NoneType錯誤完全修復.md  Path導入問題修復說明.md  Phase3_完成報告.md  Phase3_快速參考.md  Phase3_風險評估.md  Phase4_完成報告.md  Phase6_快速參考.md  Phase6_測試計劃.md  Phase7_執行計劃.md  README.md  Web界面v2功能總覽.md  Web界面回測功能對比.md  backtest_leverage_comparison.py  backtest_multi_strategy.py  backtest_multi_timeframe.py  cli.py  example_cli_usage.sh  example_config_manager.py  example_optimizer.py  example_performance_monitor.py  final_optimized_backtest.py  improved_backtest.py  leverage_comparison.csv  leverage_comparison_激進模式_1.5_ATR.csv  leverage_comparison_輕鬆模式_2.0_ATR.csv  pyproject.toml  pytest.ini  quantitative_risk_analysis.py  requirements.txt  start_alert.sh  strategy_template.py  (+86 more)
_Archive/: RECOVERY_GUIDE.md
_Archive/Code_20260211/: README.md  cleanup_temp_files.py  compare_stop_loss.py  (+6 more)
cli_commands/: __init__.py  analyze_risk.py  backtest.py  live.py  optimize.py
docs/: API.md  ASSESSMENT_2026-07-09.md  BACKLOG.md  DEVELOPER_GUIDE.md  EXAMPLES.md  IMPL_SPECS.md  INDEX.md  README.md  STRATEGY_DEVELOPMENT.md  TESTING_GUIDE.md
pages/: __init__.py
src/: __init__.py  config_manager.py
strategies/: breakout-strategy.json  example-strategy.json  mean-reversion.json  multi-timeframe-aggressive.json  multi-timeframe-relaxed.json
tools/: create_strategy.py  deploy_strategy.py  validate_on_bingx.py  validate_strategy.py  version_strategy.py
(+193 files in other folders)
